Bug 90929 - [BYT/BDW/BSW/SKL Bisected]system boot fail
Summary: [BYT/BDW/BSW/SKL Bisected]system boot fail
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: highest blocker
Assignee: Maarten Lankhorst
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-11 01:15 UTC by lu hua
Modified: 2017-10-06 14:29 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
boot log (35.11 KB, text/plain)
2015-06-11 01:15 UTC, lu hua
no flags Details
drm/i915: Make hw readout less atomic. (4.88 KB, patch)
2015-06-11 08:27 UTC, Maarten Lankhorst
no flags Details | Splinter Review

Description lu hua 2015-06-11 01:15:28 UTC
Created attachment 116427 [details]
boot log

==System Environment==
--------------------------
Regression: yes

good commit: drm-intel-next-queued/2da44aae8144b8380f4e45688e570d4c7a4ef2c4
bad commit: drm-intel-next-queued/04475e27f9d2afbc40c17284f928982857d38419

Non-working platforms:BSW/BDW/SKL


==kernel==
--------------------------
drm-intel-nightly/bae30341567d08fb4d84b1687afbb5f40568ab8c/
commit bae30341567d08fb4d84b1687afbb5f40568ab8c
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Wed Jun 10 16:56:16 2015 +0300

    drm-intel-nightly: 2015y-06m-10d-13h-55m-57s UTC integration manifest

==Bug detailed description==
-----------------------------
System boot fail on BSW/BDW/SKL with drm-intel-nightly and drm-intel-next-queued kernel.
It doesn't happen on HSW,IVB,SNB,ILK,PNV.

==Reproduce steps==
---------------------------- 
1. clean boot sysytem.
Comment 1 lu hua 2015-06-11 02:49:47 UTC
Bisect shows:f662af8c5c1619b91e3834fff103e7423e20df81 is the first bad commit
commit f662af8c5c1619b91e3834fff103e7423e20df81
Author:     Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
AuthorDate: Wed Jun 10 10:24:20 2015 +0200
Commit:     Jani Nikula <jani.nikula@intel.com>
CommitDate: Wed Jun 10 14:57:40 2015 +0300

    Revert "drm/i915: Read hw state into an atomic state struct, v2."

    This reverts commit 3bae26eb2991c00670df377cf6c3bc2b0577e82a.

    Seems it introduces regressions for 3 different reasons, oh boy..

    In bug #90868 as I can see the atomic state will be restored on
    resume without the planes being set up properly. Because plane
    setup here requires the atomic state, we'll have to settle
    for committing atomic planes first.

    In bug #90861 the failure appears to affect mostly DP devices,
    and happens because reading out the atomic state prevents a modeset
    on boot, which would require better hw state readout.

    In bug #90874 it's shown that cdclk should be part of the atomic
    state, so only performing a single modeset during resume excarbated
    the issue.

    It's better to fix those issues first, and then commit this patch,
    so do that temporarily.

    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=90868
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=90861
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=90874
    Signed-off-by: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
    Acked-by: Ander Conselvan de Oliveira <conselvan2@gmail.com>
    Signed-off-by: Jani Nikula <jani.nikula@intel.com>
Comment 2 Ville Syrjala 2015-06-11 08:25:19 UTC
My HSW hangs on i915 load as well now. Bisected it to the same commit.
Comment 3 Maarten Lankhorst 2015-06-11 08:27:02 UTC
Created attachment 116431 [details] [review]
drm/i915: Make hw readout less atomic.

Does this fix things?
Comment 4 Jani Nikula 2015-06-11 08:42:42 UTC
Maarten, please set bugs to NEEDINFO to ensure QA notices.
Comment 5 Maarten Lankhorst 2015-06-11 15:49:49 UTC
Ok not good enough.

Can you test http://cgit.freedesktop.org/~mlankhorst/linux/log/?h=topic/bug-90929 ? Should fix all.
Comment 6 nicolas dony 2015-06-11 22:59:39 UTC
Fixed for me on BDW.
Thanks.
Comment 7 ye.tian 2015-06-12 01:30:53 UTC
(In reply to Maarten Lankhorst from comment #5)
> Ok not good enough.
> 
> Can you test
> http://cgit.freedesktop.org/~mlankhorst/linux/log/?h=topic/bug-90929 ?
> Should fix all.

Fixed for me on BYT/BDW/BSW/SKL/.
Comment 8 ye.tian 2015-06-15 01:15:58 UTC
Test it on the latest nightly kernel, this problem has go away.
So verified it.
Comment 9 Elizabeth 2017-10-06 14:29:40 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.